website/team/team.css
@font-face {
  font-family: "title"; font-weight: 200 700;
  src: url("/static/other/team/fonts/oswald.ttf") format("truetype");
}
@font-face {
  font-family: "default"; font-weight: 400;
  src: url("/static/other/team/fonts/chirp.woff") format("woff");
}
@font-face {
  font-family: "fancy"; font-weight: 400;
  src: url("/static/other/team/fonts/nosynote.woff") format("woff");
}
@font-face {
  font-family: "discord"; font-weight: 400;
  src: url("/static/other/team/fonts/tiny/ggsans.woff") format("woff");
}
@font-face {
  font-family: "google"; font-weight: 400;
  src: url("/static/other/team/fonts/tiny/googlesanstextm.woff") format("woff");
}

html {
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}
body {
  background-color: black;
  background-repeat: no-repeat; background-size: cover; background-attachment: fixed;
  padding: 0; margin: 0;
  overflow: hidden;
  height: auto;
}
.site {
  position: relative; overflow-y: hidden;
  height: 100vh; height: 100dvh;
  display: flex;  flex-direction: column;
  -ms-overflow-style: none; scrollbar-width: none;
}
.site::-webkit-scrollbar {display: none}

.intro {
  z-index: 999;
}
.overlay {
  background-color: black;
  width: 100%;
  height: 100vh; height: 100dvh;
  display: flex;
  justify-content: center; align-items: center;
  z-index: 5000;
}
.flash {
  opacity: 0; position: fixed;
  top: 0; bottom: 0; left: 0; right: 0;
  background-color: lightgray;
  pointer-events: none; z-index: 2000;
}

.sogclip {
  position: fixed;
  top: 0; left: 0; right: 0; bottom: 0;
  overflow: hidden;
  z-index: 1900; pointer-events: none;
}
.smallsog {
  margin: auto; position: absolute;
  top: 0; left: 0; bottom: 0; right: 0;
  width: 150px;
  animation: shake 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
  z-index: 1900; user-select: none; pointer-events: auto;
  will-change: transform;
}
.smallsogt {
  position: absolute;
  top: 60%; left: 0; right: 0;
  text-align: center; font-family: "fancy";
  font-size: 25px; color: grey;
  opacity: 0; transition: opacity 0.5s ease-in-out;
  z-index: 900; user-select: none;
}
.skipintro {
  position: absolute;
  top: 10px; right: 10px;
  opacity: 0.5;
}

.pet {
  position: fixed;
  background-image: url("/static/ssoggycat/team/images/pet.gif");
  background-repeat: repeat-x;
  width: 100%; height: 100px;
  opacity: 0.1; z-index: -1;
  animation: scroll 10s linear infinite;
  will-change: transform; pointer-events: none;
}

.sogs {
  position: fixed; display: flex;
  height: 100%; width: 100%;
  left: 50%; top: 50%; transform: translate(-50%, -50%);
  z-index: -1; user-select: none; opacity: 0.25;
  pointer-events: none;
}
.sog {
  position: absolute;
  top: 0; left: 0;
  width: 50px; height: 50px;
  will-change: transform;
}

.title {
  will-change: transform;
  font-family: "title", sans-serif;
  font-size: 80px;
  color: white;
  animation: flip 3s linear infinite; transition: opacity 0.5s ease;
  user-select: none;
}
.ghost {
  position: fixed;
  font-size: 80px;
  font-family: "title", sans-serif;
  color: rgba(255,255,255,0.692);
  pointer-events: none; opacity: 0;
  will-change: transform, opacity;
  z-index: -1; user-select: none;
}

a {
  font-family: "default", sans-serif;
  color: white;
}

.mainstuff {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.buddypals {
  top: 120px;
  width: 80%; max-width: 700px; height: fit-content;
  left: 50%;
  display: flex; flex-direction: column; justify-content: center; align-items: center;
  pointer-events: all;
}

.buddy {
  outline: solid rgba(255,255,255,0.144) 1px;
  text-decoration: none !important;
  height: fit-content; margin: 20px; padding: 10px;
  display: flex; overflow: hidden; border-radius: 20px;
  flex-direction: column; justify-content: center; align-items: center; text-align: center;
  background-color: rgba(0,0,0,0.45);
  backdrop-filter: blur(64px);
  pointer-events: all;
}
.buddy img {
  width: 100%; height: auto; border-radius: 10px;
}

.small {margin: 5px; width: 50px}
.big {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 20px; margin-bottom: 0;
  width: 80%; height: fit-content;
}

.plus {
  text-decoration: none !important;
  width: 50px; height: auto;
  justify-content: center; align-items: center;
  display: flex; overflow: hidden; font-size: 50px;
  flex-direction: column; transform: rotate(-10deg);
}

.right {transform: perspective(900px) rotateY(-8deg) skew(-2deg,-2deg)}
.left {transform: perspective(900px) rotateY(8deg) skew(2deg,2deg)}
.padtop {padding-top: 5px}

.bigtext {font-size: 20px}
.smalltext {font-size: 15px}
.lowtext {color: #71767b}

@media (max-width: 560px) {
  .buddypals {width: 92%}
  .big {width: 100%}
  .small {width: 60px; margin: 4px}
  .small .smalltext {display: none}
}

.buttons {
  display: flex;  flex-wrap: wrap;
  width: 80%; height: fit-content; top: 105%;
  left: 50%;
  transform-origin: top center;
  z-index: 10;
}

.button {
  display: flex; flex-direction: row;
  align-items: center; padding-left: 10px; padding-right: 10px;
  width: 250px; height: 75px; text-decoration: none;
  border-radius: 20px; margin: 10px; gap: 5px;
  flex: 1 1 calc(50% - 20px); box-sizing: border-box;
  user-select: none; cursor: pointer;
}
.icon {
  width: 50px; height: 50px;
  margin-right: 5px;
}

.b1 {
  background-color: #14171A;
  font-size: 30px;
}
.b2 {
  background-color: #282b30;
  background-image: url("/static/ssoggycat/team/images/discordbg.webp");
  background-position: center; background-repeat: no-repeat;
  background-size: cover;
  font-family: "discord", sans-serif;
  font-size: 30px;
}
/* .discord {
  position: fixed; display: flex;
  width: 100vw; height: 100vh;
  justify-content: center; align-items: center;
  background: rgba(0, 0, 0, 0.5); backdrop-filter: blur(10px);
  color: #fff;
  z-index: 9999; opacity: 0; pointer-events: none;
  transition: opacity 0.5s ease;
}
/* ... */

